# webserial-api

./: .gitignore  README.md  pyproject.toml
webserial_api/: __init__.py  app.py  tasks.py
